--- a/views/albums.ejs
+++ b/views/albums.ejs
@@ -1,28 +1,21 @@
 <%- include('partials/header') %>
-    <section>
-        <% spotifyAlbums.forEach(data=> { %>
-            <article>
-                <div>
-                    <% if(data.images[0] !=undefined){%>
-                        <img src="<%= data.images[0].url%> " alt="">
+
+    <h1>Albums</h1>
+    <%# JSON.stringify(albums) %>
+        <% albums.items.forEach(album=> { %>
+            <figure>
+                <% if (album.images[0] !=undefined ) {%>
+                    <img src=<%=album.images[0].url %> alt=<%= album.name %>>
                         <%} else {%>
-                            <img src="assets/img/Rectangle.png" alt="album cover">
+                            :'(
                             <% } %>
-                </div>
-                <h3>
-                    <%= data.name %>
-                </h3>
-                <a href="/albums/<%= data.id %>">View Albums</a>
+                                <figcaption>
+                                    <%= album.name %>
+                                        <a href="/tracks/<%= album.id %>">Show Album</a>
+                                </figcaption>
+            </figure>
+            <%}) %>
+                <a href=<%=site-2 %>>Show previous albums</a>
+                <a href=<%=site %>>Show next albums</a>
 
-                <!-- <img src="<%= data.images%> " alt=""> -->
-
-                </div>
-                <h3>
-                    <%= data.name %>
-                </h3>
-                <a>View Albums</a>
-            </article>
-            <% }) %>
-    </section>
-
-    <%- include('partials/footer') %>
+                <%- include('partials/footer') %>
