--- a/views/artist.ejs
+++ b/views/artist.ejs
@@ -1,27 +1,44 @@
 <%- include('partials/header') %>
     <section>
-        <% spotifysearch.forEach(data=> { %>
+
+        <%# JSON.stringify(searchResult) %>
+            <% searchResult.forEach(artist=> {%>
+                <figure>
+                    <figcaption>
+                        <% if (artist.images.length>0 ) {%>
+                            <img src=<%=artist.images[0].url %> alt=<%= artist.name %>>
+                                <%} else {%>
+                                    :'(
+                                    <% } %>
+                                        <p>
+                                            <%= artist.name %>
+                                        </p>
+                                        <a href="/albums/<%= artist.id%>/0">Show Albums</a>
+                    </figcaption>
+                </figure>
+                <%})%>
+                    <!-- <%# spotifysearch.forEach(data=> { %>
             <article>
                 <div>
-                    <% if(data.images[0] !=undefined){%>
-                        <img src="<%= data.images[0].url%> " alt="">
-                        <%} else {%>
+                    <%#if(data.images[0] !=undefined){%>
+                        <img src="<%#= data.images[0].url%> " alt="">
+                        <%#if} else {%>
                             <img src="assets/img/Rectangle.png" alt="album cover">
-                            <% } %>
+                            <%# } %>
                 </div>
                 <h3>
-                    <%= data.name %>
+                    <%#= data.name %>
                 </h3>
-                <a href="/albums/<%= data.id %>">View Albums</a>
+                <a href="/albums/<%#= data.id %>">View Albums</a>
 
-                <!-- <img src="<%= data.images%> " alt=""> -->
+                <!-- <img src="<%#= data.images%> " alt=""> -->
 
-                </div>
-                <h3>
-                    <%= data.name %>
-                </h3>
-                <a>View Albums</a>
-            </article>
-            <% }) %>
+                    <!-- </div>
+                    <h3>
+                        <%#= data.name %>
+                    </h3>
+                    <a>View Albums</a>
+                    </article> -->
+                    <%# }) %> -->
     </section>
     <%- include('partials/footer') %>
