--- a/views/index.ejs
+++ b/views/index.ejs
@@ -2,8 +2,8 @@
     <div>
         <div>
             <form action="/artist-search" , method="GET">
-                <input placeholder="Search for an artist!" type="text" name="SearchArtist">
-                <button type="submit" value="Search">Search for an Artist</button>
+                <input placeholder="Search for an artist!" type="text" name="mySearch">
+                <button type="submit" value="Send">Search for an Artist</button>
             </form>
         </div>
     </div>
