--- a/views/tracks.ejs
+++ b/views/tracks.ejs
@@ -1,3 +1,12 @@
 <%- include('partials/header') %>
+    <%# JSON.stringify(tracks) %>
+        <% tracks.forEach(track=> {%>
+            <% if (track.preview_url.length> 0) {%>
+                <p>
+                    <%= track.name %>
+                </p>
+                <audio src=<%=track.preview_url %> controls></audio>
+                <%} %>
+                    <%})%>
 
-    <%- include('partials/footer') %>
+                        <%- include('partials/footer') %>
